force-app/main/default/objects/Hiring__c/Hiring__c.object-meta.xml
<CustomObject>
    <label>Hiring</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hiring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>