force-app/main/default/objects/Hiring__c/fields/CCTC__c.field-meta.xml
<CustomField>
    <fullName>CCTC__c</fullName>
    <label>CCTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>