force-app/main/default/objects/Hiring__c/fields/ECTC__c.field-meta.xml
<CustomField>
    <fullName>ECTC__c</fullName>
    <formula>CCTC__c   +  CCTC__c  *  percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>