force-app/main/default/objects/Hiring__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2</fullName>
            </value>
            <value>
                <fullName>2-3</fullName>
            </value>
            <value>
                <fullName>above 3yrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>