force-app/main/default/objects/Hiring__c/fields/phone_1__c.field-meta.xml
<CustomField>
    <fullName>phone_1__c</fullName>
    <label>phone 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>