force-app/main/default/objects/Hiring__c/fields/portal__c.field-meta.xml
<CustomField>
    <fullName>portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>portal</label>
    <referenceTo>Hiring__c</referenceTo>
    <relationshipLabel>Hiring</relationshipLabel>
    <relationshipName>portal</relationshipName>
    <type>Lookup</type>
</CustomField>