force-app/main/default/objects/Hiring__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <label>skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sales force</fullName>
            </value>
            <value>
                <fullName>Devops</fullName>
            </value>
            <value>
                <fullName>php</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>