force-app/main/default/objects/Hiring__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ap</fullName>
            </value>
            <value>
                <fullName>ts</fullName>
            </value>
            <value>
                <fullName>ka</fullName>
            </value>
            <value>
                <fullName>tn</fullName>
            </value>
            <value>
                <fullName>usa1</fullName>
            </value>
            <value>
                <fullName>usa2</fullName>
            </value>
            <value>
                <fullName>usa3</fullName>
            </value>
            <value>
                <fullName>uk1</fullName>
            </value>
            <value>
                <fullName>uk2</fullName>
            </value>
            <value>
                <fullName>uk3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>