force-app/main/default/objects/Hiring__c/recordTypes/first_user.recordType-meta.xml
<RecordType>
    <fullName>first_user</fullName>
    <active>true</active>
    <label>first user</label>
</RecordType>