force-app/main/default/objects/Hiring__c/recordTypes/second_user.recordType-meta.xml
<RecordType>
    <fullName>second_user</fullName>
    <active>true</active>
    <label>second user</label>
</RecordType>