force-app/main/default/objects/Hiring__c/validationRules/candidate_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>candidate_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  Name  ,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>candidate name contains only alphabets</errorMessage>
</ValidationRule>