force-app/main/default/objects/Hiring__c/validationRules/Phone_is_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_is_valid</fullName>
    <active>false</active>
    <errorConditionFormula>OR( NOT(ISBLANK( phone__c )) ,
LEN(phone__c )   =  10 ,
NOT(ISNUMBER(phone__c)) )</errorConditionFormula>
    <errorDisplayField>phone__c</errorDisplayField>
    <errorMessage>Please enter valid phone number</errorMessage>
</ValidationRule>