force-app/main/default/objects/Hiring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>country__c</columns>
    <columns>Email__c</columns>
    <columns>phone__c</columns>
    <columns>skill__c</columns>
    <columns>status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>